<resources>
    <string name="app_name">WorldAtlas</string>
    <string name="statics">Statics</string>
    <string name="quiz">Quiz</string>
    <string name="more">More\n</string>
    <string name="search_by_country">Search by country</string>

    <string name="government">Government</string>
    <string name="time_zone">Time zone</string>
    <string name="name">Official Name</string>
    <string name="capital">Capital</string>
    <string name="region">Region</string>
    <string name="language">Language</string>
    <string name="population">Population</string>
    <string name="population_filter">population</string>
    <string name="area">Area</string>
    <string name="area_filter">area</string>
    <string name="currency">Currency</string>
    <string name="gdp">GDP</string>
    <string name="phone_code">Calling Code</string>
    <string name="internet_domain">Internet Domain</string>
    <string name="search">Search</string>
    <string name="search_country">Search country</string>
    <string name="countries">Countries</string>
    <string name="games">Quiz</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="map_key">AIzaSyDyfPGRrY1aFuLWxsb1ai3o9zv9Aq_5lB0</string>
    <string name="map">Map</string>
    <string name="by_population">By population</string>
    <string name="by_area">By area</string>
    <string name="by_gdp">By gdp</string>
    <string name="continent">Continents</string>
    <string name="rivers">Rivers</string>
    <string name="oceans">Oceans</string>
    <string name="wonders">Wonders</string>
    <string name="mountains">Mountains</string>
    <string name="continents">Continents</string>
    <string name="about_app">About App</string>
    <string name="seas">Seas</string>


</resources>